--- a/index.html
+++ b/index.html
@@ -409,6 +409,6 @@
 		</div>
 	</div>
 </div>
-<script src="script/script.js"></script>
+<script src="dist/dev-bundle.js"></script>
 </body>
 </html>
