--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 							</div>
 							<div class="col-md-12 col-sm-12 col-12">
 								<input class="mess" id="form2-message" name="user_message"
-											 placeholder="Ваше сообщение">
+											 placeholder="Ваше сообщение" required>
 							</div>
 						</div>
 					</div>
